--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,13 @@ section {
 .dados h5 {
     color: hsl(0, 0%, 59%);
 }
+
+@media screen and (max-width: 768px){
+    .card {
+        height: auto;
+    }
+
+    .card-footer {
+        height: auto;
+    }
+}
